--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ div {
 <div><img src="gecko_outline_sm.jpg" height="180px" width="350px" alt="Hand Drawn Lizard"></div>
 	
 <div style="font-family: 'Palatino Linotype', 'Sylfaen', serif; font-size: x-large">Handmade, bespoke, small leather goods. Dyed, tooled, and hand stitched.<br>Handbags, wallets, belts made of vegetable tanned leather.
-<br>Currently accepting commissions. <a href = "mailto:gekkotaleather@gmail.com">Inquiries are welcome.</a>
+<br>Currently accepting commissions. <a href = "mailto:gekkotaleather@gmail.com">Inquiries are welcome.</a>  Email gekkotaleather@gmail.com.
 </div>
 	
 <div style="padding-top: 40px;"><img style="border:4px solid orange;" src="triceratops.jpg" height="320px" width="400px" alt="Triceratops Leather Figure">
